# __mpc_hd_gg18

./: .gitignore  Cargo.toml  Makefile  README.md
patches/curv-kzen-0.9.0/src/: lib.rs
patches/curv-kzen-0.9.0/src/cryptographic_primitives/secret_sharing/: feldman_vss.rs
patches/mp-ecdsa-184c49fa/src/protocols/multi_party_ecdsa/gg_2018/: mod.rs  party_i.rs
patches/mp-ecdsa-184c49fa/src/utilities/mta/: mod.rs
src/: main.rs  util.rs
src/biz_algo/: hd.rs  keygen.rs  manager.rs  mod.rs  reshare.rs  sign.rs
src/mp_ecdsa/: feldman_vss.rs  mod.rs  party_i.rs
src/mp_ecdsa/mta/: mod.rs
src/mp_ecdsa2/: FeldmanVss.rs  MultiPartyGG18.rs  mod.rs
