[package]
name = "MPC_HD_GG18"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mpc_hd_gg18"
path = "src/main.rs"

[dependencies]
aes-gcm = { version = "0.9", features = ["std"] }
anyhow = "1"
bip32 = { version = "0.5", features = ["secp256k1"] }
centipede = { version = "0.3", default_features = false }
clap = { version = "4", features = ["default"] }
curv-kzen = { version = "0.9.0", default-features = false, features = ["num-bigint"] }
hex = "0.4"
hmac = "0.11"
itertools = "0.12"
k256 = { version = "0.12.0", features = ["arithmetic", "ecdsa", "ecdsa-core", "serde"] }
miniz_oxide = "0.7"
multi-party-ecdsa = { path = "patches/mp-ecdsa-184c49fa" }
once_cell = "1.18" # singleton pattern
paillier = { package = "kzen-paillier", version = "0.4.2", default-features = false }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls","mysql","chrono"] }
thiserror = "1"
tiny-bip39 = "1"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
zk-paillier = { version = "0.4.3", default_features = false }

[patch.crates-io]
curv-kzen = { version = "0.9.0", path = "patches/curv-kzen-0.9.0" }
